improv payment pall

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -18,3 +18,10 @@
 .margintop {
     margin-top: 60px;
 }
+.img-logo1 {
+    z-index: 99999;
+    opacity: .2;
+}
+.pay-border {
+    border-color: black !important;
+}
